2005-02-03  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update to dev version 1.77.
	* NEWS: Add section 1.78.

2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't use exists for reference in an array, for
	old perl. Report from Sven de Vries.
	* T2h_i18n.pm: remove useless use that prevented to run on IRIX. 
	Report from ezra peisach.
	* Tests/*: remove some $Id: ChangeLog,v 1.180 2005/02/04 02:10:36 dprice Exp $ rcs tags

2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: require perl 5.00405 for File::Spec (report from
	Ezra peisach).

2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't use open with three args, use binmode (for
	old perl, reported by Sven de Vries).
	* doc/Makefile.am: rebuild the manual based on the sources, not 
	on the script, as it is remade by ./configure. Use the rebuild
	of the manual as a check target (ideas from Derek).
	* Tests/*: test for results with USE_UNICODE set to 0.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* configure.ac: Revert most of the PERL change.

2005-02-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, examples/chm.init: remove our keywords for old
	perl (reported by Sven de Vries).

2005-02-01  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Include missing-texi2html.

2005-02-01  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that Perl is no longer required to build.
	* configure.ac: Don't search for texinfo programs handled by Automake.
	Declare PERL a precious var.  Exit when not found and not set.  Warn
	when set to a relative path.
	* missing-texi2html, doc/texi2html.html: New files.
	* doc/.cvsignore: Add more intermediate files.
	* doc/Makefile.am: Remove targets autogenerated by Automake.
	(EXTRA_DIST): Distribute texi2html.html.
	(texi2html.html): Call texi2html via missing-texi2html.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in, NEWS: Update for development.