@@ -1,4 +1,4 @@
-@set UPDATED 1 February 2005
+@set UPDATED 4 February 2005
 @set UPDATED-MONTH February 2005
 @set EDITION 1.77
 @set VERSION 1.77
