@@ -1,3 +1,9 @@
+2005-02-04  Derek Price  <derek@ximbiot.com>
+
+	* configure.ac: Make .zip archives as part of `make dist'.
+	* doc/Makefile.am (texi2html.html): Depend on files in srcdir, not
+	builddir.
+
 2005-02-03  Derek Price  <derek@ximbiot.com>
 
 	* configure.ac: Update to dev version 1.77.
@@ -9,7 +15,7 @@
 	old perl. Report from Sven de Vries.
 	* T2h_i18n.pm: remove useless use that prevented to run on IRIX. 
 	Report from ezra peisach.
-	* Tests/*: remove some $Id: ChangeLog,v 1.180 2005/02/04 02:10:36 dprice Exp $ rcs tags
+	* Tests/*: remove some $Id: ChangeLog,v 1.181 2005/02/04 16:29:56 dprice Exp $ rcs tags
 
 2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>
 
